Fix blogpost headings spilling into rail
https://github.com/airpair/airpair-com-v1-issue-tracker/issues/15

--- a/public/styles/posts.less
+++ b/public/styles/posts.less
@@ -231,8 +231,8 @@ section#posts {
 		margin:10px 0
 	}
 	h1 { padding-left:@mainElmPad }
-	h2 { text-align:left;font-size:28px;margin-bottom:5px;padding-left:@mainElmPad }
-	h3 { text-align:left }
+	h2 { max-width:@mainElmWidth;text-align:left;font-size:28px;margin:40px 0 30px 0;padding-left:@mainElmPad;line-height:35px }
+	h3 { max-width:@mainElmWidth;text-align:left }
 	p { margin-top:0;
     max-width:@mainElmWidth;
     vertical-align:top;
